New entries should be added at the top

==============================================================
2004-11-04 backend_agg.py: added IMAGE_FORMAT to list the formats that the 
           backend can save to.
           backend_gtkagg.py: added support for saving JPG files by using the
           GTK backend - SC

2004-10-31 backend_cairo.py: now produces png and ps files (although the figure
           sizing needs some work). pycairo did not wrap all the necessary 
           functions, so I wrapped them myself, they are included in the 
           backend_cairo.py doc string. - SC

2004-10-31 backend_ps.py: clean up the generated PostScript code, use
           the PostScript stack to hold itermediate values instead of
           storing them in the dictionary. - JV

2004-10-30 backend_ps.py, ft2font.cpp, ft2font.h: fix the position of
           text in the PostScript output.  The new FT2Font method
           get_descent gives the distance between the lower edge of
           the bounding box and the baseline of a string.  In
           backend_ps the text is shifted upwards by this amount. - JV

2004-10-30 backend_ps.py: clean up the code a lot.  Change the
           PostScript output to be more DSC compliant.  All
           definitions for the generated PostScript are now in a
           PostScript dictionary 'mpldict'.  Moved the long comment
           about drawing ellipses from the PostScript output into a
           Python comment. - JV

2004-10-30 backend_gtk.py: removed FigureCanvasGTK.realize() as its no longer 
           needed. Merged ColorManager into GraphicsContext
           backend_bases.py: For set_capstyle/joinstyle() only set cap or 
           joinstyle if there is no error. - SC

2004-10-30 backend_gtk.py: tidied up print_figure() and removed some of the 
           dependency on widget events - SC

2004-10-28 backend_cairo.py: The renderer is complete except for mathtext,